dice clt problem

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3573,7 +3573,7 @@ $Y=2$ & 0.1 & 0.1 & 0.2 \\
 
 \section{Всё нормально!}
 
-
+% в этом разделе про нормальное распределение до ЦПТ, ЦПТ позже
 
 \begin{problem}
  Величины $X_1$, \ldots, $X_n$ распределены нормально $\cN(4, 100)$ и независимы.
@@ -3585,7 +3585,9 @@ $Y=2$ & 0.1 & 0.1 & 0.2 \\
 \end{enumerate}
 
 
-Решите эту задачу двумя способами: с использованием R и с помощью таблиц. В R могут оказаться полезны функции \verb|pnorm| и \verb|qnorm|.
+Решите эту задачу двумя способами: с использованием компьютера и с помощью таблиц. 
+В R можно использовать функции \verb|pnorm| и \verb|qnorm|.
+В python можно использовать \verb|scipy.stats.norm.cdf| и \verb|scipy.stats.norm.ppf|.
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -3659,15 +3661,6 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{sol}
 \end{problem}
 
-\begin{problem}
-  Вася хочет посчитать сумму 100 случайных слагаемых. 
-  Слагаемые независимы и равномерны\addtag{распределение!равномерное} распределены с математическим ожиданием равным единице.
-  Васе достаточно оценить сумму с точностью до $0.1\%$ с вероятностью больше 99\%.
-
-  Сколько знаков после запятой достаточно записывать Васе у каждого слагаемого?
-\begin{sol}
-\end{sol}
-\end{problem}
 
 
 \begin{problem}
@@ -3837,17 +3830,17 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 % lln
 \begin{problem}
  Величины $X_1$, \ldots, $X_n$ независимы и равномерно\addtag{распределение!равномерное} распределены на отрезке $[0;1]$. 
- Найдите $\plim \bar X_n$, $\plim 1/(1 +\bar X_n)$, $\plim \sum_{i=1}^n \ln X_i / n$, $\plim \sqrt[n]{X_1 \cdot \ldots \cdot  X_n}$, $\plim (X_1 \cdot \ldots \cdot X_n)$, $\plim \max\{X_1, \ldots, X_n \}$, $\plim \min \{X_1, \ldots, X_n\}$, $\plim \frac{\sum (X_i - \bar{X})^2}{n}$, $\plim X_1 / \bar{X}$.
+ Найдите\addtag{ЗБЧ} $\plim \bar X_n$, $\plim 1/(1 +\bar X_n)$, $\plim \sum_{i=1}^n \ln X_i / n$, $\plim \sqrt[n]{X_1 \cdot \ldots \cdot  X_n}$, $\plim (X_1 \cdot \ldots \cdot X_n)$, $\plim \max\{X_1, \ldots, X_n \}$, $\plim \min \{X_1, \ldots, X_n\}$, $\plim \frac{\sum (X_i - \bar{X})^2}{n}$, $\plim X_1 / \bar{X}$.
 
-% clt
 \begin{sol}
 \end{sol}
 \end{problem}
 
+% clt
 \begin{problem}
  Величины $X_1$, \ldots, $X_n$ независимы и равномерно\addtag{распределение!равномерное} распределены на отрезке $[0;1]$. 
  \begin{enumerate}
-  \item Найдите примерный закон распределения величин $\bar X_{100}$, $S_{100} = X_1 + \ldots + X_{100}$.
+  \item Найдите примерный закон распределения\addtag{ЦПТ} величин $\bar X_{100}$, $S_{100} = X_1 + \ldots + X_{100}$.
   \item Найдите примерно $\P(\bar X_{100} > 0.55)$, $\P(S_n \in [50; 60])$, $\E(\bar X_{100} | \bar X_{100} > 0.6)$.
   \item Найдите такое число $a$, для которого $\P(S_n < a)=0.65$.
  \end{enumerate}
@@ -3856,7 +3849,7 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 \end{problem}
 
 \begin{problem}
- Количество смс за сутки, посылаемое каждым из 160 абонентов, 
+ Количество смс за сутки, посылаемое каждым из 160 абонентов\addtag{ЦПТ}, 
  имеет пуассоновское распределение\addtag{распределение!Пуассона}\addtag{пуассоновский поток} со средним значением 5 смс в сутки. 
  Какова вероятность того, что за двое суток абоненты пошлют в сумме более 1700 сообщений?
 \begin{sol}
@@ -3868,7 +3861,7 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
  Каждый день цена акции равновероятно поднимается или опускается на один рубль. 
  Сейчас акция стоит 1000 рублей. 
  
- Найдите вероятность того, что через сто дней акция будет стоить больше 1030 рублей.
+ Найдите вероятность того, что через сто дней\addtag{ЦПТ} акция будет стоить больше 1030 рублей.
 \begin{sol}
   $S_{100} \sim \cN(1000, 100)$, $\P(S_{100}>1030)=\P(Z>3)=0.0013$
 \end{sol}
@@ -3877,11 +3870,42 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 \begin{problem}
  Вероятность выпадения монетки\addtag{монетка} «орлом» равна 0.63.
 \begin{enumerate}
-\item Какова вероятность, что в 100 испытаниях выборочная доля выпадения
+\item Какова вероятность, что в 100 испытаниях\addtag{ЦПТ} выборочная доля выпадения
 орлов будет отличаться от истинной вероятности менее, чем на 0.07?
 \item Каким должно быть минимальное количество испытаний, чтобы
 вероятность отличия выборочной доли и истинной вероятности менее чем на 0.02 была больше 0.95?
 \end{enumerate}
+
+
+\begin{problem}
+  Вася хочет посчитать сумму 100 случайных слагаемых\addtag{ЦПТ}. 
+  Слагаемые независимы и равномерны\addtag{распределение!равномерное} распределены с математическим ожиданием равным единице.
+  Васе достаточно оценить сумму с точностью до $0.1\%$ с вероятностью больше 99\%.
+
+  Сколько знаков после запятой достаточно записывать Васе у каждого слагаемого?
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+\begin{problem} «В пятницу 13-го»
+  
+  В пятницу 13-го сентября 2019 года в Атланте перевернулся грузовик 
+  с 216 тысячей игральных кубиков\addtag{кубик}. К счастью, никто не пострадал. 
+  \begin{enumerate}
+    \item Какова вероятность того, что в сумме выпало больше 740000,
+    если все кубики выпали на дорогу?
+    \item Какая часть кубиков выпала на дорогу, если 
+    вероятность того, что сумма на кубиках, выпавших на дорогу,
+    больше суммы на кубиках, оставшихся в грузовике, равна $2/3$?
+  \end{enumerate}
+
+
+  \url{https://kotaku.com/truck-carrying-gaming-dice-spills-onto-highway-rolls-a-1838218869}
+\begin{sol}
+\end{sol}
+\end{problem}
+
 
 
 % TODO: add berry-esseen
