--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -130,6 +130,13 @@
 \usepackage{physics}
 % \usepackage{minted} % moved to listings to simplify development
 \usepackage{listings}
+\lstset{%
+basicstyle=\fontfamily{lmtt}\bfseries,
+keywordstyle=\fontfamily{lmtt}\bfseries
+}
+% \usepackage{julia-mono-listings}
+% TODO: установить?
+
 \usepackage{answers}
 
 
@@ -277,11 +284,12 @@
 
 \newpage
 
-Это задачки к семинарам исследовательского потока факультета экономики вшэ. 
+Это задачки по теории вероятностей к семинарам исследовательского потока факультета экономики вшэ. 
 При везении подсказку, ответ или решение можно найти, кликнув по номеру задачи. 
 Свежая версия доступна по ссылке \url{https://github.com/bdemeshev/probability_pro}.
-Красивые и сложные олимпиадные задачи по вероятностям можно найти на \url{https://github.com/bdemeshev/probability_dna},
-а подборку прошлых экзаменов — на \url{https://github.com/bdemeshev/probability_hse_exams}.
+Красивые и сложные олимпиадные задачи по вероятностям можно найти по ссылке \url{https://github.com/bdemeshev/probability_dna},
+подборку прошлых экзаменов — \url{https://github.com/bdemeshev/probability_hse_exams},
+а задачки к семинарам по статистике — \url{https://github.com/bdemeshev/statistics_pro}.
 
 \section{Вперёд, в рукопашную!}
 
@@ -3890,8 +3898,8 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 
 \begin{problem} «В пятницу 13-го»
   
-  В пятницу 13-го сентября 2019 года в Атланте перевернулся грузовик 
-  с 216 тысячей игральных кубиков\addtag{кубик}. К счастью, никто не пострадал. 
+  В пятницу 13 сентября 2019 года в Атланте перевернулся грузовик 
+  с 216 тысячями игральных кубиков\addtag{кубик}. К счастью, никто не пострадал. 
   \begin{enumerate}
     \item Какова вероятность того, что в сумме выпало больше 740000,
     если все кубики выпали на дорогу?
@@ -5135,6 +5143,141 @@ $Y_1 \leq Y_2 \leq \ldots \leq Y_{10}$.
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
+
+
+\section{И потребленье возрастает, а производство отстаёт!}
+
+Испить мудрость жадными глотками можно в источнике \autocite{wilf2013generatingfunctionology}.
+
+Обобщенный бином Ньютона для произвольной степени $a\in \RR$:
+\[
+(1+x)^{a}=\sum_{k=0}^{\infty} C_a^k x^k, \; \text{ где } C_a^k=\frac{a(a-1)(a-2)\cdot \ldots \cdot (a-k+1)}{k!}
+\]
+
+
+\begin{problem}
+ Найдите коэффициент при $x^{17}$ в многочлене $(1+x^5+x^7)^{20}$.
+
+\begin{sol}
+$C_{20}^2\cdot 18$.
+\end{sol}
+\end{problem}
+
+\begin{problem}
+ Найдите и запишите максимально просто производящие функции для последовательностей
+\begin{enumerate}
+\item 1, 1, 1, 1, 0, 0, 0, \ldots
+
+\item 1, 1, 1, 1, 1, 1, 1, \ldots
+
+\item 1, 4, 6, 4, 1, 0, 0, \ldots
+
+\end{enumerate}
+\begin{sol}
+  $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
+  $1+x+x^2+x^3+\ldots = 1/(1-x)$
+  $(1+x)^4$
+\end{sol}
+\end{problem}
+\begin{problem}
+ Найдите первые четыре коэффициента в многочленах $(1+2x)^{-3}$ и $(1+x+x^2)^{-4}$.
+
+\begin{sol}
+\end{sol}
+\end{problem}
+
+\begin{problem}
+ Кубик подбрасывают три раза. Обозначим результаты подбрасываний $X_1$, $X_2$ и $X_3$. Найдите производящие функции для величин $X_1$, $X_1+X_2$ и $X_1+X_2+X_3$.
+
+\begin{sol}
+\end{sol}
+\end{problem}
+
+\begin{problem}
+ Производящая функция случайной величины $X$ линейна и проходит через точки $(1,1)$ и $(5,4)$. Какие значения принимает величина $X$ и с какими вероятностями?
+
+\begin{sol}
+  0 с вероятностью 1/4 и 1 с вероятностью 3/4
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+ На месте убийства преступники оставили улику — маленький-маленький кусочек графика производящей функции. Сможет ли Шерлок Холмс по этому кусочку восстановить все вероятности?
+
+
+\begin{sol}
+  да, сможет!
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+  Леонардо Пизанский (Фибоначчи) приобрёл новорождённую пару кроликов. 
+  Каждая взрослая пара кроликов даёт в качестве приплода ежемесячно новую пару кроликов. 
+  Только что рождённая пара кроликов начинает приносить приплод со второго месяца жизни. 
+  Пусть $F_n$ — количество пар кроликов в $n$-ый месяц.
+  \begin{enumerate}
+    \item Каким соотношением связаны $F_{n}$, $F_{n-1}$ и $F_{n-2}$?
+    \item Пусть для удобства $F_0=0$ и $F_1=1$. Найдите производящую функцию для количества пар кроликов.
+    \item Используя хороший софт, поделите 1 на 999999999999999999999998999999999999999999999999. 
+    Здесь 23 девятки, восьмёрка и потом 24 девятки. 
+    Почему мы видим последовательность чисел Фибонначи? 
+    Например, можно поделить в julia установив высокую точность:
+% TODO: поправить на Julia
+\begin{lstlisting}[language=python] 
+setprecistion(BigFloat, 10000)
+1 / 999999999999999999999998999999999999999999999999
+\end{lstlisting}
+
+ \item Разложите найденную функцию в сумму двух дробей и, вспомнив формулу для геометрической прогрессии, найдите явную формулу для чисел Фибоначчи.
+  \end{enumerate}
+\begin{sol}
+$F_n = F_{n-1} + F_{n-2}$.
+Запишем разложения для $g(x)$, $xg(x)$ и $x^2 g(x)$ друг под другом. Вычитаем. Получаем, что $g(x) = x/(1-x-x^2)$.
+
+Указанная дробь — это и есть производящая функция при маленьком $x$.
+
+Производящая функция представима в виде суммы:
+\[
+g(x) = \frac{1}{\sqrt{5}}\left( \frac{a}{x+a} - \frac{b}{x+b}  \right),
+\]
+где $a=(1-\sqrt{5})/2$, $b=(1+\sqrt{5})/2$.
+\end{sol}
+\end{problem}
+
+\begin{problem}
+Сева стартует в точке $0$ на числовой прямой. За каждый час он перемещается вправо на единицу с вероятностью $0.7$ или влево на единицу с вероятностью $0.3$. Пусть $X_1$ — момент времени, когда Сева впервые достигнет точки $1$, а $X_2$ — точки $2$.
+\begin{enumerate}
+\item Как связаны производящие функции $h_1(t)$ и $h_2(t)$ величин $X_1$ и $X_2$?
+\item Рассмотрев возможные положения Севы после первого шага, составьте квадратное уравнение на $h_1(t)$.
+\item Найдите $h_1(t)$.
+\item Найдите $\E(X_1)$.
+\item Выпишите формулу для $\P(X_1 = 2017)$.
+\end{enumerate}
+\begin{sol}
+Замечаем, что $h_2(t)=h_1(t)\cdot h_1(t)$. После первого шага:
+\[
+h_1(t) = 0.7t + 0.3th^2_1(t)
+\]
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Ангела Меркель подбрасывает правильную монетку до выпадения трёх орлов подряд. 
+Найдите производящую функцию для количества подбрасываний.
+\begin{sol}
+
+\end{sol}
+\end{problem}
+
+
+
+
 
 
 
