recognize law by mgf

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1162,7 +1162,7 @@ p=q\cdot (1 - (1-p)^2), \quad p=\frac{2q-1}{q}=\frac{2}{3}
 \end{problem}
 
 \begin{problem}
- Вася нажимает на пульте телевизора кнопку «On-Off» 100 раз
+Вася нажимает на пульте телевизора кнопку «On-Off» 100 раз
 подряд. Пульт старый, поэтому в первый раз кнопка срабатывает с
 вероятностью $\frac{1}{2}$, затем вероятность срабатывания падает.
 Какова вероятность того, что после всех нажатий телевизор будет
@@ -5205,7 +5205,9 @@ $C_{20}^2\cdot 18$.
 
 
 \begin{problem}
- На месте убийства преступники оставили улику — маленький-маленький кусочек графика производящей функции. Сможет ли Шерлок Холмс по этому кусочку восстановить все вероятности?
+На месте убийства преступники оставили улику — маленький-маленький кусочек графика производящей функции. 
+ 
+Сможет ли Шерлок Холмс по этому кусочку восстановить все вероятности?
 
 
 \begin{sol}
@@ -5276,6 +5278,36 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 \end{problem}
 
 
+
+\begin{problem}
+Для решения этой задачи можно и нужно использовать таблицу функций, производящих моменты. 
+Например, можно воспользоваться \url{https://en.wikipedia.org/wiki/Moment-generating_function#Examples}.
+
+Опознайте закон распределения по функции, производящей моменты, и укажите математическое ожидание случайной величины $X$:
+\begin{enumerate}
+  \item $M_X(u) = (0.2 + 0.8e^u)^5$;
+  \item $M_X(u) = \exp(3e^t - 3)$;
+  \item $M_X(u) = (1 - 2t)^{-1}$;
+  \item $M_X(u) = (\exp(10t) - \exp(4t))/6t$;
+  \item $M_X(u) = \exp(10t+20t^2)$.
+\end{enumerate}
+
+\begin{sol}
+
+  \begin{enumerate}
+    \item Биномиальное с $n=5$ и $p=0.8$.
+    \item Пуассоновское с интенсивностью $\lambda=3$.
+    \item Хи-квадрат с двумя степенями свободы, экспоненциальное с $\lambda=1/2$, 
+    гамма с $k=1$ и $\theta=2$. Это разные названия одного и того же распределения.
+    \item Равномерное на отрезке $[4;10]$. 
+    \item Нормальное с $\mu = 10$ и $\sigma^2= 40$.
+  \end{enumerate}
+  
+  
+
+\end{sol}
+\end{problem}
+  
 
 
 
