--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3601,7 +3601,8 @@ $Y=2$ & 0.1 & 0.1 & 0.2 \\
 \end{problem}
 
 \begin{problem}
- Величина $W$ имеет функцию плотности $f(w)=c\cdot \exp(5w-2w^2)$. Найдите $\E(W)$, $\Var(W)$, $c$.
+ Величина $W$ имеет функцию плотности $f(w)=c\cdot \exp(5w-2w^2)$. 
+ Найдите $\E(W)$, $\Var(W)$, $c$.
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -3609,8 +3610,8 @@ $Y=2$ & 0.1 & 0.1 & 0.2 \\
 \begin{problem}
  Величина $X$ нормальна $\cN(\mu, \sigma^2)$.
 \begin{enumerate}
-\item Выпишите функцию плотности случайной величины $X$, $f(x)$
-\item Найдите точку максимума и точки перегиба функции $f$
+\item Выпишите функцию плотности случайной величины $X$, $f(x)$.
+\item Найдите точку максимума и точки перегиба функции $f$.
 \end{enumerate}
 \begin{sol}
 $x_{max}=\mu$, $x=\mu \pm \sigma$
@@ -3620,8 +3621,8 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \begin{problem}
  Величина  $X$ распределена нормально  $\cN( 0,\sigma^2  )$.
 \begin{enumerate}
-\item Найдите $\E(|X|)$
-\item Найдите функцию плотности $|X|$
+\item Найдите $\E(|X|)$.
+\item Найдите функцию плотности $|X|$.
 \end{enumerate}
 \begin{sol}
   \[
@@ -3635,22 +3636,19 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{problem}
 
 \begin{problem}
- Известно, что  $\ln Y\sim \cN(\mu; \sigma^2 )$. Найдите
-  $\E(Y)$,  $\Var(Y)$, медиану и моду величины $Y$.
+ Известно, что  $\ln Y\sim \cN(\mu; \sigma^2 )$. 
+ Найдите $\E(Y)$,  $\Var(Y)$, медиану и моду величины $Y$.
 \begin{sol}
-  медиана — $\exp(\mu)$
-  мода — $\exp(\mu - \sigma^2)$
-  $\E(Y)=\exp(\mu+\sigma^2/2)$
-  $\Var(Y)=\exp(2\mu + 2\sigma^2)-\exp(2\mu + \sigma^2)$
-
+  Медиана — $\exp(\mu)$, мода — $\exp(\mu - \sigma^2)$, $\E(Y)=\exp(\mu+\sigma^2/2)$, 
+  $\Var(Y)=\exp(2\mu + 2\sigma^2)-\exp(2\mu + \sigma^2)$.
 \end{sol}
 \end{problem}
 
 \begin{problem}
  Величина $X$ имеет стандартное нормальное распределение.
 \begin{enumerate}
-\item Найдите $\E(Y)$ для $Y=\max\{X, 0\}$
-\item Найдите $\E(X|X<0)$ и $\Var(X|X<0)$
+\item Найдите $\E(Y)$ для $Y=\max\{X, 0\}$.
+\item Найдите $\E(X|X<0)$ и $\Var(X|X<0)$.
 \end{enumerate}
 \begin{sol}
 \end{sol}
