--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1363,6 +1363,28 @@ q_3=(1-q_2)p_2 + q_2(1-p_2) = \frac{1}{2}p^2 + \frac{1}{2}(1-p_2) = \frac{1}{2},
 что Василиса Премудрая\addtag{герои!Василиса Премудрая}  сможет найти на карте
 бесконечный жизненный путь Ильи Муромца проходящий исключительно мимо спящих Змеев Горынычей?
 \begin{sol}
+Решим более общую задачу, где ЗГ появляется на дороге с вероятностью $\alpha$. 
+Методом первого шага получаем уравнение
+\[
+p = \alpha\left(1 - (1-p)^3\right).
+\]
+Одним из решений уравнения будет $p=0$,
+другим, всегда лежащим в интервале $(0;1)$,
+будет $p=\frac{3\alpha - \sqrt{4\alpha-3\alpha^2}}{2\alpha}$ при $\alpha\neq 0$.
+Третье решение не попадает в диапазон от 0 до 1 и, следовательно, нас не интересует.
+
+Функция $p(\alpha)$ — это вероятность существования бесконечного пути.
+По смыслу задачи, эта функция нестрого монотонна, непрерывна и принимает значение $0$ при $\alpha=0$ и значение $1$ при $\alpha=1$.
+
+Следовательно, функция $p(\alpha)$ будет иметь вид
+\[
+p(\alpha)=\begin{cases}
+0,\alpha \in \left[0; \frac{1}{3}\right]\\
+\frac{3\alpha - \sqrt{4\alpha-3\alpha^2}}{2\alpha}, \; \alpha \in \left(\frac{1}{3};1\right].
+\end{cases}
+\]
+
+При $\alpha=\frac{2}{3}$ искомая вероятность равна $\frac{3 - \sqrt{3}}{2}$.
 \end{sol}
 \end{problem}
 
