--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -8,12 +8,13 @@
 
 % utf8 is the preferred encoding
 
- % this magick is to solve problem that appeared after update of texlive 2018 to texlive 2020
+ % this magic is to solve problem that appeared after update of texlive 2018 to texlive 2020
  % https://tex.stackexchange.com/questions/511341/the-error-occurred-after-the-last-update
 \makeatletter
 \def\nobreak{\penalty\@M}
 \makeatother
 
+\usepackage{comment}
 
 \usepackage{fontspec} % что-то про шрифты? % нужно ли загружать?
 
@@ -134,11 +135,12 @@
 basicstyle=\fontfamily{lmtt}\bfseries,
 keywordstyle=\fontfamily{lmtt}\bfseries
 }
-% \usepackage{julia-mono-listings}
-% TODO: установить?
 
 \usepackage{answers}
 
+\newenvironment{rus}{}{} % environment just prints the text
+\newenvironment{eng}{}{}
+\excludecomment{eng}
 
 
 
@@ -284,11 +286,10 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 
 \newpage
 
-Это задачки по теории вероятностей к семинарам исследовательского потока факультета экономики вшэ. 
 При везении подсказку, ответ или решение можно найти, кликнув по номеру задачи. 
-Свежая версия доступна по ссылке \url{https://github.com/bdemeshev/probability_pro}.
+
 Красивые и сложные олимпиадные задачи по вероятностям можно найти по ссылке \url{https://github.com/bdemeshev/probability_dna},
-подборку прошлых экзаменов — \url{https://github.com/bdemeshev/probability_hse_exams},
+подборку прошлых экзаменов вшэ — \url{https://github.com/bdemeshev/probability_hse_exams},
 а задачки к семинарам по статистике — \url{https://github.com/bdemeshev/statistics_pro}.
 
 \section{Вперёд, в рукопашную!}
@@ -1137,7 +1138,23 @@ $\P({b}) = \P({a,b}) - \P({a}) = \P({b,c}) - \P({c}) = 0.5$
 \end{problem}
 
 \begin{problem}
- «Amoeba». A population starts with a single amoeba. For this one and for the generations thereafter, there is a probability of 3/4 that an individual amoeba will split to create two amoebas, and a 1/4 probability that it will die out without producing offspring. Let the random variable $X$ be the number of generations before the death of all the amoebas. Find the probabilities $\P(X=2)$, $\P(X=3)$, $\P(X=\infty)$
+\begin{eng}
+A population starts with a single amoeba.
+With probability $3/4$ every individual amoeba splits to create two amoebas, and with probability $1/4$ it will die out without producing offspring.
+Let the random variable $X$ be the number of generations before the death of all the amoebas.
+
+Find the probabilities $\P(X=2)$, $\P(X=3)$, $\P(X=\infty)$.
+\end{eng}
+\begin{rus}
+Изначально есть одна амёба.
+С вероятностью $3/4$ каждая амёба делится на две амёбы,
+а с вероятностью $1/4$ погибает.
+Обозначим с помощью $X$ количество поколений до гибели
+всей колонии амёб.
+
+Найдите вероятности $\P(X=2)$, $\P(X=3)$ и $\P(X=\infty)$.
+\end{rus}
+
 \begin{sol}
 
 $X=2$ означает, что жило поколение первой амёбы (она одна), жили её дети, и эти дети не произвели потомство. 
@@ -1198,11 +1215,18 @@ q_3=(1-q_2)p_2 + q_2(1-p_2) = \frac{1}{2}p^2 + \frac{1}{2}(1-p_2) = \frac{1}{2},
 \end{problem}
 
 \begin{problem}
- Suppose the probability to get a head when throwing an unfair coin is $p$,
- what's the expected number of throwings in order to get two consecutive heads?
- The expected number of tails?
-\begin{sol}
+\begin{eng}
+ The probability to get a tail when throwing an unfair coin is $p$,
+ what's the expected number of throwings in order to get two consecutive tails?
+ The expected number of heads?
+\end{eng}
+\begin{rus}
+ Неправильная монетка выпадает орлом с вероятностью $p$.
+ Чему равно ожидаемое количество орлов? Ожидаемое количество решек?
+\end{rus}
 
+\begin{sol}
+\begin{rus}
 По условию вероятность орла равна $p$.
 Нарисуем дерево
 
@@ -1287,7 +1311,7 @@ q_3=(1-q_2)p_2 + q_2(1-p_2) = \frac{1}{2}p^2 + \frac{1}{2}(1-p_2) = \frac{1}{2},
 \]
 
 Откуда $a = 1/p^2 - 1 = 3$
-
+\end{rus}
 \end{sol}
 \end{problem}
 
@@ -1514,8 +1538,7 @@ $\E(X) = 1$
 
 
 \begin{problem}
-Докажите каждое равенство словами, без использования факториалов.
-Затем обобщите каждое равенство, добавив туда $n$, $k$ и суммы.
+\begin{eng}
 \begin{enumerate}
   \item $\binom{10}{7} = \binom{10}{3}$
   \item $\binom{10}{3} + \binom{10}{4} = \binom{11}{4}$
@@ -1523,19 +1546,52 @@ $\E(X) = 1$
   \item $ 4 \binom{10}{4} = 10 \binom{9}{3}$
   \item $\binom{10}{3}\binom{7}{2} = \binom{10}{2}\binom{8}{3}$
   \item $1\cdot \binom{5}{1} + 2\cdot \binom{5}{2} + 3\cdot \binom{5}{3} + 4\cdot\binom{5}{4} + 5\cdot \binom{5}{5} = 5 \cdot 2^4$
-  \item $\binom{2}{2} + \binom{3}{2} + \binom{4}{2} + \binom{5}{2} = \binom{6}{3}$
+  \item $\binom{2}{2} + \binom{3}{2} + \binom{4}{2} + \binom{5}{2} + \binom{6}{2}= \binom{7}{3}$
   \item $\binom{4}{0}\binom{5}{3} + \binom{4}{1}\binom{5}{2} +  \binom{4}{2}\binom{5}{1} +  \binom{4}{3}\binom{5}{0} =\binom{9}{3}$
-  \item $\binom{4}{0}^2 + \binom{4}{1}^2 + \binom{4}{2}^2 + \binom{4}{3}^2 + \binom{4}{4}^2 = \binom{8}{4}$
+  \item $\binom{5}{0}^2 + \binom{5}{1}^2 + \binom{5}{2}^2 + \binom{5}{3}^2 + \binom{5}{4}^2 = \binom{10}{4}$
 \end{enumerate}
-\begin{sol}
+\end{eng}
+
+Посмотрим на следующие равенства:
+
+\begin{enumerate}[label={(\arabic*)}]
+  \item $C_{10}^{7} = C_{10}^{3}$
+  \item $C_{10}^{3} + C_{10}^{4} = C_{11}^{4}$
+  \item $C_{4}^{0} + C_{4}^{1} + C_{4}^{2} + C_{4}^{3} + C_{4}^{4} = 2^4$
+  \item $ 4 C_{10}^{4} = 10 C_{9}^{3}$
+  \item $C_{10}^{3}C_{7}^{2} = C_{10}^{2}C_{8}^{3}$
+  \item $1\cdot C_{5}^{1} + 2\cdot C_{5}^{2} + 3\cdot C_{5}^{3} + 4\cdot C_{5}^{4} + 5\cdot C_{5}^{5} = 5 \cdot 2^4$
+  \item Тождество хоккейной клюшки, $C_{2}^{2} + C_{3}^{2} + C_{4}^{2} + C_{5}^{2} + C_{6}^{2} = C_{7}^{3}$
+  \item Тождество Вандермонда, $C_{4}^{0}C_{5}^{3} + C_{4}^{1}C_{5}^{2} +  C_{4}^{2}C_{5}^{1} +  C_{4}^{3}C_{5}^{0} =C_{9}^{3}$
+  \item $(C_{5}^{0})^2 + (C_{5}^{1})^2 + (C_{5}^{2})^2 + (C_{5}^{3})^2 + (C_{5}^{4})^2 = C_{10}^{4}$
+\end{enumerate}
+
 \begin{enumerate}
-  \item Выбрать три, чтобы взять, или выбрать семь, чтобы не взять.
-  \item Число дорог с 11 ходами вниз и 4 вправо равно сумму числа дорог.
+ \item Докажите каждое равенство словами, не вычисляя явно левую и правую части.
+\item Обобщите каждое равенство, добавив туда $n$, $k$ и суммы.
+\item Докажите каждое полученное равенство алгебраически.
+\end{enumerate}
+
+
+\begin{sol}
+Лёва объясняет левую часть, Рома --- правую.
+\begin{enumerate}
+  \item У Лёвы есть 10 книг, он хочет взять с собой 7.
+  У Ромы есть 10 книг, он хочет оставить дома 3.
+  \item Лёва и Рома знают только буквы $L$ и $R$.
+  Рома записал все слова из 11 букв с 4 буквами $L$.
+  Лёва поделил слова Ромы по последней букве на две группы.
   \item Число всех подмножеств в множестве из 4-х элементов.
   \item Из 10 человек хотим выбрать одного лидера и 3-х помощников.
   \item Из 10 человек хотим выбрать 3-х орлов и 2-х слонов.
   \item Число всех подмножеств с одним лидером в множестве из 5-ти элементов.
-\end{enumerate}
+  \item Строим слова из семи букв, каждая буква --- это $L$ или $R$. В слове должно быть три $L$.
+  Разобьём слова на группы в зависимости от позиции последней $L$.
+  \item В группе 9 человек, четыре мальчика и пять девочек.
+  Хотим выбрать любых троих человек.
+  \item В группе 10 человек, поровну мальчиков и девочек.
+  Мы хотим выбрать четверых человек.
+  \end{enumerate}
 
 \end{sol}
 \end{problem}
