--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1568,13 +1568,14 @@ $\E(X) = 1$
 
 \begin{enumerate}
  \item Докажите каждое равенство словами, не вычисляя явно левую и правую части.
-\item Обобщите каждое равенство, добавив туда $n$, $k$ и суммы.
-\item Докажите каждое полученное равенство алгебраически.
+\item Обобщите каждое равенство, добавив в него $n$, $k$ и суммы.
+\item Докажите каждое полученное общее равенство алгебраически.
 \end{enumerate}
 
 
 \begin{sol}
 Лёва объясняет левую часть, Рома --- правую.
+% TODO: переписать в ключе Лёва-Рома
 \begin{enumerate}
   \item У Лёвы есть 10 книг, он хочет взять с собой 7.
   У Ромы есть 10 книг, он хочет оставить дома 3.
@@ -1598,14 +1599,32 @@ $\E(X) = 1$
 
 
 \begin{problem}
-Объясните каждую интерпретацию словами, без использования факториалов.
+Запишите в виде одного биномиального коэффициента следующие величины:
 \begin{enumerate}
-  \item $\binom{10}{4}$ — количество строк из 4 единиц и 6 нулей.
-  \item $\binom{7}{4}$ — количество строк из 4 единиц и 6 нулей, в которых единицы не идут подряд.
-  \item $\binom{10}{4}$ — число способов раздать 4 яблока 10 людям, не дав никому больше одного.
-  \item $\binom{13}{4}$ — число способов раздать 4 яблока 10 людям.
+  \item количество различных слов из четырёх букв А и шести букв Б;
+  \item количество различных слов из четырёх букв А и шести букв Б, в которых буквы А не идут подряд;
+  \item число способов раздать 4 одинаковых яблока 10 разным людям, не дав никому больше одного;
+  \item число способов раздать 4 одинаковых яблока 10 разным людям.
 \end{enumerate}
 \begin{sol}
+  \begin{enumerate}
+    \item $\binom{10}{4}$
+    \item $\binom{7}{4}$
+    \item $\binom{10}{4}$
+    \item $\binom{13}{4}$
+  \end{enumerate}
+\end{sol}
+\end{problem}
+
+\begin{problem}
+  В одном учебнике была предложена следующая задача. <<Из ящика, в котором лежат 10 красных и 5 зелёных яблок, 
+  выбирают одно красное и два зелёных яблока. Сколькими способами это можно сделать?>>.
+  
+  Сформулируйте несколько различных трактовок этой задачи и найдите решение каждой из них.
+
+\begin{sol}
+  Можно считать яблоки различными или одинаковыми. 
+  При различных яблоках ответ --- $C_{10}^1 C_{5}^2$, при идентичных --- $1$. 
 \end{sol}
 \end{problem}
 
