correct misprint in 2.17

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1548,7 +1548,7 @@ $\E(X) = 1$
   \item $1\cdot \binom{5}{1} + 2\cdot \binom{5}{2} + 3\cdot \binom{5}{3} + 4\cdot\binom{5}{4} + 5\cdot \binom{5}{5} = 5 \cdot 2^4$
   \item $\binom{2}{2} + \binom{3}{2} + \binom{4}{2} + \binom{5}{2} + \binom{6}{2}= \binom{7}{3}$
   \item $\binom{4}{0}\binom{5}{3} + \binom{4}{1}\binom{5}{2} +  \binom{4}{2}\binom{5}{1} +  \binom{4}{3}\binom{5}{0} =\binom{9}{3}$
-  \item $\binom{5}{0}^2 + \binom{5}{1}^2 + \binom{5}{2}^2 + \binom{5}{3}^2 + \binom{5}{4}^2 = \binom{10}{4}$
+  \item $\binom{5}{0}^2 + \binom{5}{1}^2 + \binom{5}{2}^2 + \binom{5}{3}^2 + \binom{5}{4}^2 + \binom{5}{5}^2 = \binom{10}{5}$
 \end{enumerate}
 \end{eng}
 
@@ -1563,7 +1563,7 @@ $\E(X) = 1$
   \item $1\cdot C_{5}^{1} + 2\cdot C_{5}^{2} + 3\cdot C_{5}^{3} + 4\cdot C_{5}^{4} + 5\cdot C_{5}^{5} = 5 \cdot 2^4$
   \item Тождество хоккейной клюшки, $C_{2}^{2} + C_{3}^{2} + C_{4}^{2} + C_{5}^{2} + C_{6}^{2} = C_{7}^{3}$
   \item Тождество Вандермонда, $C_{4}^{0}C_{5}^{3} + C_{4}^{1}C_{5}^{2} +  C_{4}^{2}C_{5}^{1} +  C_{4}^{3}C_{5}^{0} =C_{9}^{3}$
-  \item $(C_{5}^{0})^2 + (C_{5}^{1})^2 + (C_{5}^{2})^2 + (C_{5}^{3})^2 + (C_{5}^{4})^2 = C_{10}^{4}$
+  \item $(C_{5}^{0})^2 + (C_{5}^{1})^2 + (C_{5}^{2})^2 + (C_{5}^{3})^2 + (C_{5}^{4})^2 + (C_{5}^{5})^2= C_{10}^{5}$
 \end{enumerate}
 
 \begin{enumerate}
