separate combinatorics, sigma-algebras

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -224,6 +224,16 @@ keywordstyle=\fontfamily{lmtt}\bfseries
 
 
 \newcommand{\RR}{\mathbb{R}}
+\newcommand{\NN}{\mathbb{N}}
+\newcommand{\ZZ}{\mathbb{Z}}
+\newcommand{\cF}{\mathcal{F}}
+\newcommand{\cB}{\mathcal{B}}
+\newcommand{\cA}{\mathcal{A}}
+\newcommand{\cH}{\mathcal{H}}
+
+
+
+
 
 \newcommand{\Lin}{\mathcal{L}in}
 \newcommand{\Linp}{\Lin^{\perp}}
@@ -1537,6 +1547,77 @@ $\E(X) = 1$
 \end{problem}
 
 
+
+\begin{problem}
+Случайная величина $X$ равновероятно принимает значения $1$, $2$ и $3$. 
+
+Найдите $\P(\E(\P(\P(X=7)=0))=1)$ и $\E(\E(\E(\P(\P(X=1)=1))))$.
+  \begin{sol}
+    $1$ и $0$
+  \end{sol}
+\end{problem}
+
+\begin{problem}
+Абу Али Хусейн ибн Абдуллах ибн аль-Хасан ибн Али ибн Сина\footnote{
+  \textarab[utf]{ابو علی حسین بن عبدالله بن سینا}
+  }
+выбирает равномерно\addtag{распределение!равномерное} 10 точек на отрезке $[0;30]$.
+
+Какова вероятность того, что между любыми точками будет расстояние не меньше единицы?
+\begin{sol}
+$21^{10}/30^{10}$
+\end{sol}
+\end{problem}
+  
+
+
+\begin{problem}
+Аня хватается за верёвку в форме окружности в произвольной точке.
+Боря берёт мачете и с завязанными глазами разрубает верёвку в двух случайных независимых местах. 
+Аня забирает себе тот кусок, за который держится. Боря забирает оставшийся кусок. 
+Вся верёвка имеет единичную длину.
+  \begin{enumerate}
+  \item Чему равна ожидаемая длина куска верёвки, доставшегося Ане?
+  \item Найдите вероятность того, что у Ани верёвка длиннее.
+\end{enumerate}
+\begin{sol}
+  \begin{enumerate}
+  \item Мысленно отметим на окружности три точки: места ударов Бориса и точку,
+  где схватилась Анна. 
+  Можно считать, что эти три точки равномерно\addtag{распределение!равномерное} и независимо распределены по окружности.
+  Следовательно, среднее расстояние между соседними точками равно $1/3$.
+  Аня берёт два кусочка, слева и справа от своей точки.
+  Значит ей в среднем достаётся $2/3$ окружности.
+  \item  Объявим точку, где схватилась Аня нулём.
+  Координаты двух ударов изобразим на плоскости. Закрашиваем подходящий участок.
+  Аня выигрывает на полосе вдоль биссектрисы за исключением двух треугольников.
+  Вероятность того, что Анин кусок длиннее равна $3/4$.
+  \end{enumerate}
+\end{sol}
+\end{problem}
+    
+\begin{problem}
+Города Левск и Правск соединены железной дорогой. 
+Поезда в обе стороны отправляются из них каждый час одновременно, время в пути составляет ровно час. 
+Стрелочник, живущий в домике при железной дороге, любит подойти к окну в случайный момент времени, 
+дождаться первого проходящего мимо поезда и записать его направление. 
+Поезда обоих направлений в его записях встречаются одинаково часто. 
+
+\begin{enumerate}
+    \item В скольки минут пути на поезде от ближайшего города он живёт?
+    \item Сколько в среднем он ждёт поезда?
+\end{enumerate}
+\begin{sol}
+Рисуем картинку, по горизонтальной оси откладываем время, по вертикальной координаты поездов. 
+Получаем, что он живёт в 15 минутах от ближайшего города и ждать поезда в среднем тоже 15 минут.
+
+Задача от Виктора Прасолова. 
+\end{sol}
+\end{problem}
+
+
+\section{Великий Комбинатор}
+
 \begin{problem}
 \begin{eng}
 \begin{enumerate}
@@ -1617,84 +1698,351 @@ $\E(X) = 1$
 \end{problem}
 
 \begin{problem}
-  В одном учебнике была предложена следующая задача. <<Из ящика, в котором лежат 10 красных и 5 зелёных яблок, 
+  В одном учебнике была предложена следующая задача. <<Из ящика, в котором лежат 10 красных и 5 зелёных яблок,
   выбирают одно красное и два зелёных яблока. Сколькими способами это можно сделать?>>.
-  
+
   Сформулируйте несколько различных трактовок этой задачи и найдите решение каждой из них.
 
 \begin{sol}
-  Можно считать яблоки различными или одинаковыми. 
-  При различных яблоках ответ --- $C_{10}^1 C_{5}^2$, при идентичных --- $1$. 
+  Можно считать яблоки различными или одинаковыми.
+  При различных яблоках ответ --- $C_{10}^1 C_{5}^2$, при идентичных --- $1$.
 \end{sol}
 \end{problem}
 
-\begin{problem}
-Случайная величина $X$ равновероятно принимает значения $1$, $2$ и $3$. 
 
-Найдите $\P(\E(\P(\P(X=7)=0))=1)$ и $\E(\E(\E(\P(\P(X=1)=1))))$.
-  \begin{sol}
-    $1$ и $0$
-  \end{sol}
-\end{problem}
+\section{Знание — сила!}
 
-\begin{problem}
-Абу Али Хусейн ибн Абдуллах ибн аль-Хасан ибн Али ибн Сина\footnote{
-  \textarab[utf]{ابو علی حسین بن عبدالله بن سینا}
-  }
-выбирает равномерно\addtag{распределение!равномерное} 10 точек на отрезке $[0;30]$.
+Сигма-алгебра, порождённая дискретной случайной величиной $X$, $\sigma(X)$ — список всех событий,
+которые можно сформулировать с помощью случайной величины $X$.
 
-Какова вероятность того, что между любыми точками будет расстояние не меньше единицы?
-\begin{sol}
-$21^{10}/30^{10}$
-\end{sol}
-\end{problem}
-  
+Сигма-алгебра, порождённая произвольной случайной величиной $X$, $\sigma(X)$ — наименьший список всех событий, обладающий двумя свойствами.
+Во-первых, в него входят сравнения величины $X$ с любым действительным числом.
+Во-вторых, при выполнении счётного количества логических операций (дополнение, объединение, пересечение) с событиями из этого списка мы получаем
+событие из этого списка.
 
 
 \begin{problem}
-Аня хватается за верёвку в форме окружности в произвольной точке.
-Боря берёт мачете и с завязанными глазами разрубает верёвку в двух случайных независимых местах. 
-Аня забирает себе тот кусок, за который держится. Боря забирает оставшийся кусок. 
-Вся верёвка имеет единичную длину.
-  \begin{enumerate}
-  \item Чему равна ожидаемая длина куска верёвки, доставшегося Ане?
-  \item Найдите вероятность того, что у Ани верёвка длиннее.
-\end{enumerate}
-\begin{sol}
-  \begin{enumerate}
-  \item Мысленно отметим на окружности три точки: места ударов Бориса и точку,
-  где схватилась Анна. 
-  Можно считать, что эти три точки равномерно\addtag{распределение!равномерное} и независимо распределены по окружности.
-  Следовательно, среднее расстояние между соседними точками равно $1/3$.
-  Аня берёт два кусочка, слева и справа от своей точки.
-  Значит ей в среднем достаётся $2/3$ окружности.
-  \item  Объявим точку, где схватилась Аня нулём.
-  Координаты двух ударов изобразим на плоскости. Закрашиваем подходящий участок.
-  Аня выигрывает на полосе вдоль биссектрисы за исключением двух треугольников.
-  Вероятность того, что Анин кусок длиннее равна $3/4$.
-  \end{enumerate}
-\end{sol}
-\end{problem}
-    
-\begin{problem}
-Города Левск и Правск соединены железной дорогой. 
-Поезда в обе стороны отправляются из них каждый час одновременно, время в пути составляет ровно час. 
-Стрелочник, живущий в домике при железной дороге, любит подойти к окну в случайный момент времени, 
-дождаться первого проходящего мимо поезда и записать его направление. 
-Поезда обоих направлений в его записях встречаются одинаково часто. 
+Случайные величина $X$ принимает значения $1$, $2$ и $-2$ равновероятно.
 
 \begin{enumerate}
-    \item В скольки минут пути на поезде от ближайшего города он живёт?
-    \item Сколько в среднем он ждёт поезда?
+ \item Найдите сигма-алгебру $\sigma(X)$.
+ \item Как изменится ответ, если изменить вероятности значений величины $X$?
+ \item Найдите сигма-алгебру $\sigma(\abs{X})$.
+ \item Вася знает, чему равен $\abs{X}$, а Маша знает, чему равен $X^2$.
+ Как связаны между собой сигма-алгебры, описывающие их наделённость информацией?
 \end{enumerate}
-\begin{sol}
-Рисуем картинку, по горизонтальной оси откладываем время, по вертикальной координаты поездов. 
-Получаем, что он живёт в 15 минутах от ближайшего города и ждать поезда в среднем тоже 15 минут.
 
-Задача от Виктора Прасолова. 
+
+\begin{sol}
+\begin{enumerate}
+\item
+\item Никак, в определении сигма-алгебры не участвуют вероятности.
+\item $\sigma(\abs{X}) = \{\emptyset, \Omega, \{\abs{X} = 2\}, \{X= 1\}\}$.
+\item
+\end{enumerate}
+
 \end{sol}
 \end{problem}
 
+
+\begin{problem}
+Эксперимент может окончиться одним из шести исходов:
+
+\begin{tabular}{*{4}{c}}
+\toprule
+& $X=-1$ & $X=0$ & $X=1$ \\
+\midrule
+$Y=0$ & 0.1 & 0.2 & 0.3  \\
+$Y=1$ & 0.2 & 0.1 & 0.1  \\
+\bottomrule
+\end{tabular}
+
+\begin{enumerate}
+ \item Найдите явно сигма-алгебры $\sigma(X)$, $\sigma(Y)$, $\sigma(X \cdot Y)$, $\sigma(X^2)$, $\sigma(2X+3)$.
+ \item Сколько элементов в сигма-алгебрах $\sigma(X, Y)$, $\sigma(X + Y)$, $\sigma(X, Y, X+Y)$?
+\end{enumerate}
+
+\begin{sol}
+\begin{enumerate}
+ \item
+ \item $\card \sigma(X, Y) = 2^6$, $\card \sigma(X + Y) = 2^4$, $\card \sigma(X, Y, X+Y) = 2^6$.
+\end{enumerate}
+
+\end{sol}
+\end{problem}
+
+
+
+
+\begin{problem}
+Посмотрим на количество событий в сигма-алгебре!
+\begin{enumerate}
+ \item Случайная величина $X$ принимает пять значений.
+Сколько событий в сигма-алгебре $\sigma(X)$?
+\item Может ли в сигма-алгебре быть 1000 событий? 1024?
+\item Маша подбрасывает правильную монетку 100 раз и прекрасно помнит результаты всех прошлых бросков.
+Сколько событий в сигма-алгебре, которая описывает наделённость Маши информацией?
+\end{enumerate}
+
+
+
+\begin{sol}
+\begin{enumerate}
+ \item $2^5$
+ \item Только степени двойки или бесконечное количество событий.
+ \item Адски много, $2^{2^{100}}$.
+\end{enumerate}
+\end{sol}
+\end{problem}
+
+
+
+
+
+\begin{problem}
+Как могут соотноситься между собой сигма-алгебры $\sigma(X)$ и $\sigma(f(X))$, где $f$ — произвольная функция? В каком случае они совпадают?
+\begin{sol}
+$\sigma(f(X)) \subseteq \sigma(X)$, сигма-алгебры будут равны, если $f$ — взаимнооднозначная функция.
+\end{sol}
+\end{problem}
+
+
+
+
+
+\begin{problem}
+Сколько $\sigma$-алгебр можно создать на множестве из трёх элементов? из четырёх элементов?
+
+\begin{sol}
+Столько же, сколько разбиений, пять сигма-алгебр для трёх элементов и 15 сигма-алгебр для четырёх элементов, эти количества называются числами Белла.
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Приведите пример алгебры, которая не является $\sigma$-алгеброй.
+
+\begin{sol}
+Например, $\Omega=[0;1]$, $\mathcal{A}$ состоит из конечных множеств и множеств с конечными дополнениями.
+\end{sol}
+\end{problem}
+
+\begin{problem}
+Операции над сигма-алгебрами.
+Приведите явный контр-пример, если это возможно.
+\begin{enumerate}
+ \item Всегда ли объединение двух сигма-алгебр — это сигма-алгебра?
+ \item Всегда ли пересечение двух сигма-алгебр — это сигма-алгебра?
+\end{enumerate}
+
+
+\begin{sol}
+\begin{enumerate}
+ \item Объединение двух сигма-алгебр — не всегда сигма-алгебра.
+ \item Пересечение двух сигма-алгебр — всегда сигма-алгебра.
+\end{enumerate}
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Пусть $\cF$ — $\sigma$-алгебра подмножеств $\Omega$, и
+$B\subseteq\Omega$. Верно ли, что набор множеств
+$\mathcal{H}=\{A:A\subseteq B$ или $B^{c}\subseteq A\}$ является
+$\sigma$-алгеброй на $\Omega$?
+
+\begin{sol}
+Да, удобно изобразить $\Omega$ отрезком, «пескари» $A\subseteq B$ и «акулы» $A \supseteq B^{c}$.
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+Будем обозначать количество элементов множества с помощью $\card A$.
+Рассмотрим подмножества натуральных чисел, $A \subseteq \mathbb{N}$.
+Определим для подмножества плотность Чезаро (Cesaro density),
+\[
+\gamma(A)=\lim_{n\to \infty}\frac{\card (A\cap \{1,2,3,\ldots,n\})}{n}
+\]
+в тех случаях, когда этот предел существует.
+
+Плотность Чезаро показывает, какую «долю» от всех натуральных чисел составляет указанное подмножество.
+Теперь рассмотрим все подмножества, имеющие плотность Чезаро,
+$\mathcal{H}=\{A\subseteq \mathbb{N}|\exists \gamma(A)\}$.
+
+\begin{enumerate}
+\item Чему равна плотность Чезаро у нечётных чисел?
+\item Приведите пример множества, у которого не определена доля Чезаро.
+\item Верно ли, что у натуральных чисел, в записи которых присутствует
+хотя бы одна единица, есть доля? Если да, то чему она равна?
+\item Верно ли, что у натуральных чисел, в записи которых присутствует
+ровно одна единица, есть доля? Если да, то чему она равна?
+\item Верно ли, что $\mathcal{H}$ — алгебра? Сигма-алгебра?
+\end{enumerate}
+
+
+\begin{sol}
+Разобьем натуральный ряд на пары соседних чисел. Можно
+так подобрать множества $A$ и $B$, что в каждом из них из каждой
+пары взято только одно число.
+Поэтому $\gamma(A)=\gamma(B)=\frac{1}{2}$. Подобрав
+совпадение-несовпадение в паре, можно сделать так, что
+$\gamma(A\cap B)$ не существует.
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+ Правильный кубик подбрасывается один раз. $Y$ — индикатор того, выпала ли четная грань. $Z$ — индикатор того, выпало ли число больше двух.
+\begin{enumerate}
+\item Сколько элементов $\sigma(Z)$?
+\item Сколько элементов в $\sigma(Y\cdot Z)$?
+\item Сколько элементов в $\sigma(Y,Z)$?
+\item Как связаны между собой $ \sigma $-алгебры $\sigma(Y\cdot Z)$ и $\sigma(Y,Z)$?
+\end{enumerate}
+
+
+\begin{sol}
+
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Монетка подкидывается бесконечное количество раз: $X_{n}$ равно 1, если при $n$-ом подбрасывании выпадает орел и $0$, если решка.
+Определим кучу $ \sigma$-алгебр: $\cF_{n}:=\sigma(X_1,X_2, \ldots, X_n)$, $\cH_{n}:=\sigma(X_{n}, X_{n+1}, X_{n+2}, \ldots)$.
+
+\begin{enumerate}
+ \item Приведите по два нетривиальных, отличных от $\Omega$ и $\emptyset$, примера такого события $A$, что:
+
+\begin{enumerate}
+\item $A\in \cF_{2010}$
+\item $A\notin \cF_{2010}$
+\item $A$ лежит в каждой $\mathcal{H}_{n}$
+\end{enumerate}
+
+\item В какие из упомянутых $\sigma$-алгебр входят события:
+\begin{enumerate}
+\item $ X_{37}>0$
+\item $ X_{37}>X_{2010}$
+\item $ X_{37}>X_{2010}>X_{12}$
+\end{enumerate}
+
+\item Упростите выражения: $ \cF_{11}\cap \cF_{25} $, $ \cF_{11}\cup \cF_{25} $, $ \mathcal{H}_{11}\cap \mathcal{H}_{25} $, $ \mathcal{H}_{11}\cup \mathcal{H}_{25}$.
+\end{enumerate}
+
+
+\begin{sol}
+
+\end{sol}
+\end{problem}
+
+\begin{problem}
+Правда ли равносильны три набора требований к списку множеств $\cF$?
+
+Тариф «Классический»:
+\begin{enumerate}
+ \item $\Omega \in \cF$;
+ \item Если $A\in \cF$, то $A^c \in \cF$;
+ \item Если $A_1, A_2, A_3, \ldots, \in \cF$, то $\cup A_i \in \cF$.
+\end{enumerate}
+
+
+Тариф «Перевёрнутый»:
+\begin{enumerate}
+ \item $\emptyset \in \cF$;
+ \item Если $A\in \cF$, то $A^c \in \cF$;
+ \item Если $A_1, A_2, A_3, \ldots, \in \cF$, то $\cap A_i \in \cF$.
+\end{enumerate}
+
+
+Тариф «Хочу всё»:
+\begin{enumerate}
+ \item $\Omega \in \cF$, $\emptyset \in \cF$;
+ \item Если $A\in \cF$ и $B\in \cF$, то $A \backslash B \in \cF$;
+ \item Если $A_1, A_2, A_3, \ldots, \in \cF$, то $\cup A_i \in \cF$ и $\cap A_i \in \cF$.
+\end{enumerate}
+
+
+\begin{sol}
+Да, все тарифы эквивалентны.
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Рассмотрим $\Omega=[0;1]$ и набор множества $\cF$ таких,
+что либо каждое множество не более, чем счётно, либо дополнение к нему не более, чем счётно.
+
+\begin{enumerate}
+\item Верно ли, что $\cF$ — алгебра? $\sigma$-алгебра?
+\item Придумайте $B\subset\Omega$, такое что $B \notin\cF$.
+\end{enumerate}
+
+\begin{sol}
+Например, $B$ — Канторово множество, или, гораздо проще,
+$B=[0;0,5]$. Оно само более чем счетно и дополнение к нему более
+чем счетно.
+
+Набор $\cF$ действительно $\sigma$-алгебра.
+$\emptyset$ лежит в $\cF$, так как имеет ноль элементов.
+
+Если $A$ не более чем счетно, то $A^{c}$ лежит в $\cF$,
+так как дополнение к $A^{c}$ содержит не более чем счетное
+число элементов.
+
+Если дополнение к $A$ не более чем счетно, то $A^{c}$ лежит
+в $\cF$, так как содержит не более чем счетное число элементов.
+
+Проверяем счетное объединение $\bigcup_{i} A_{i}$.
+Если среди $A_{i}$ встречаются только не более чем счетные, то и
+их объединение — не более чем счетно.
+Если среди $A_{i}$ встретилось хотя бы одно множество с не более
+чем счетным дополнением, то $\bigcup_{i} A_{i}$ тоже будет
+обладать не более чем счетным дополнением, так как объединение не
+может быть меньше ни одного из объединяемых множеств.
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+В лесу есть три вида грибов: рыжики, лисички и мухоморы. Попадаются они равновероятно и независимо друг от друга. Маша нашла 100 грибов. Пусть $R$ — количество рыжиков, $L$ — количество лисичек, а $M$ — количество мухоморов среди найденных грибов.
+\begin{enumerate}
+\item Сколько элементов $ \sigma(R)$?
+\item Сколько элементов $ \sigma(R,M)$?
+\item Измерима ли $L$ относительно $ \sigma(R)$?
+\item Измерима ли $L$ относительно $ \sigma(R,M)$?
+\item Измерима ли $L$ относительно $ \sigma(R+M)$?
+\item Измерима ли $L$ относительно $ \sigma(R-M)$?
+\end{enumerate}
+
+\begin{sol}
+$ 2^{101} $, $2^{101\cdot 51}$,
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Сейчас либо солнечно, либо дождь, либо пасмурно без дождя.
+Соответственно, множество $\Omega$ состоит из трёх исходов, $\Omega=\{\text{солнечно},\text{дождь},\text{пасмурно}\}$.
+Джеймс Бонд пойман и привязан к стулу с завязанными глазами, но он может на слух отличать, идёт ли дождь.
+\begin{enumerate}
+\item Как выглядит $\sigma$-алгебра событий, которые различает агент 007?
+\item Как выглядит минимальная $\sigma$-алгебра, содержащая событие $A=\{\text{не видно солнце}\}$?
+\item Сколько различных $\sigma$-алгебр можно придумать для данного $\Omega$?
+\end{enumerate}
+
+
+\begin{sol}
+$\cF=\{\emptyset, \Omega, \{\text{дождь}\}, \{\text{солнечно}, \text{пасмурно}\}$. Всего есть $1+1+3=5$ $\sigma$-алгебр.
+\end{sol}
+\end{problem}
 
 
 
